--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
-  "dependencies": {
-    "express": "^5.1.0",
-    "pg": "^8.16.3"
-  }
+"name": "chineespoepen-game",
+"version": "1.0.0",
+"description": "A multiplayer game of Chinees Poepen.",
+"main": "server.js",
+"scripts": {
+"start": "node server.js"
+},
+"dependencies": {
+"cors": "^2.8.5",
+"express": "^4.19.2",
+"pg": "^8.12.0",
+"socket.io": "^4.7.5"
+}
 }
