--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 "main": "server.js",
 "scripts": {
 "start": "node server.js"
+"build": "echo 'Geen build nodig, bestanden zijn statisch' && exit 0"
 },
 "dependencies": {
 "cors": "^2.8.5",
